fix code Analysis